[package]
name = "png-transparent-to-white"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
rayon = "1.8"
walkdir = "2.4"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true