[package]
name = "png-transparent-to-white"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
rayon = "1.8"
walkdir = "2.4"
indicatif = "0.17"
num_cpus = "1.16"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
futures-intrusive = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true